# Vital-Signs-Monitor

./: .gitignore
firmware/rp2040/: CMakeLists.txt
firmware/rp2040/APP/: CMakeLists.txt
hardware/Temperature_Sensor/: README.md
